Bug 15027 - Uninitialized litemask in variable in vfs_gpfs module
Summary: Uninitialized litemask in variable in vfs_gpfs module
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: VFS Modules (show other bugs)
Version: 4.14.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-03-21 16:30 UTC by Christof Schmitt
Modified: 2022-05-02 09:48 UTC (History)
1 user (show)

See Also:


Attachments
Patch for 4.16 (1.62 KB, patch)
2022-03-28 14:03 UTC, Christof Schmitt
slow: review+
Details
Patch for 4.15 (1.55 KB, patch)
2022-03-28 14:04 UTC, Christof Schmitt
no flags Details
Patch for 4.15 (1.62 KB, patch)
2022-03-28 14:06 UTC, Christof Schmitt
slow: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christof Schmitt 2022-03-21 16:30:21 UTC

    
Comment 1 Samba QA Contact 2022-03-28 09:11:04 UTC
This bug was referenced in samba master:

127f728d58e79a42f8826500e3b15c486e88e556
Comment 2 Christof Schmitt 2022-03-28 14:03:30 UTC
Created attachment 17250 [details]
Patch for 4.16
Comment 3 Christof Schmitt 2022-03-28 14:04:50 UTC
Created attachment 17251 [details]
Patch for 4.15
Comment 4 Christof Schmitt 2022-03-28 14:06:56 UTC
Created attachment 17252 [details]
Patch for 4.15
Comment 5 Ralph Böhme 2022-03-30 08:45:02 UTC
Reassigning to Jule for inclusion in 4.16 and 4.15.
Comment 6 Jule Anger 2022-03-30 09:06:30 UTC
Pushed to autobuild-v4-{16,15}-test.
Comment 7 Samba QA Contact 2022-03-30 10:07:03 UTC
This bug was referenced in samba v4-15-test:

c1b4844f98801ef9d5a317ca3ff8b7bb8c29f47e
Comment 8 Samba QA Contact 2022-03-30 11:13:03 UTC
This bug was referenced in samba v4-16-test:

19705602653298c8335df8bf20ed10f601f572da
Comment 9 Jule Anger 2022-03-30 11:35:54 UTC
Closing out bug report.

Thanks!
Comment 10 Samba QA Contact 2022-04-26 14:44:03 UTC
This bug was referenced in samba v4-15-stable (Release samba-4.15.7):

c1b4844f98801ef9d5a317ca3ff8b7bb8c29f47e
Comment 11 Samba QA Contact 2022-05-02 09:48:06 UTC
This bug was referenced in samba v4-16-stable (Release samba-4.16.1):

19705602653298c8335df8bf20ed10f601f572da