source3/modules/vfs_gpfs.c
@@ -1482,7 +1482,7 @@ static NTSTATUS vfs_gpfs_fget_dos_attributes(struct vfs_handle_struct *handle,
 	char buf[PATH_MAX];
 	const char *p = NULL;
 	struct gpfs_iattr64 iattr = { };
-	unsigned int litemask = GPFS_SLITE_EXACT_BITS;
+	unsigned int litemask = 0;
 	struct timespec ts;
 	uint64_t file_id;
 	NTSTATUS status;
@@ -1988,7 +1988,7 @@ static int vfs_gpfs_check_pathref_fstat_x(struct gpfs_config_data *config,
 					  struct connection_struct *conn)
 {
 	struct gpfs_iattr64 iattr = {0};
-	unsigned int litemask = GPFS_SLITE_EXACT_BITS;
+	unsigned int litemask = 0;
 	int saved_errno;
 	int fd;
 	int ret;
